fix:tree widget layout issues with overlay on ios

--- a/Frontend/src/app/common/ui/mds-editor/widgets/mds-editor-widget-tree/mds-editor-widget-tree.component.scss
+++ b/Frontend/src/app/common/ui/mds-editor/widgets/mds-editor-widget-tree/mds-editor-widget-tree.component.scss
@@ -13,7 +13,7 @@ mat-form-field {
 }
 .suggestion-card {
     width: 100%;
-    min-width: 400px;
+    min-width: 350px;
     max-height: 500px;
     overflow: auto;
     // margin-top: -22px;
